# bigmath

./: .gdb_history  CMakeLists.txt  Makefile  README.md
examples/: main.cpp
include/: __defines.h  __mpz.h  bigmath.h  bigmath.hpp
include/bigmath/: bigfloat.hpp  bigint.hpp  defines.h  mpn.h  mpq.h  mpz.h
src/: alloc.c
src/bigfloat/: arithmetics.cpp  bigfloat.cpp  exponential.cpp  io.cpp  logarithmic.cpp  logical.cpp  trigonometry.cpp
src/bigint/: bigint.cpp
src/mpn/: add.c  add_1.c  add_n.c  addmul_1.c  and_n.c  cmp.c  com_n.c  divrem.c  ior_n.c  lshift.c  mul.c  mul_1.c  popcount.c  rshift.c  scan1.c  sub.c  sub_1.c  sub_n.c  submul_1.c  xor_n.c
src/mpz/: abs.c  add.c  add_ui.c  and.c  cdiv_qr.c  cdiv_r.c  cdiv_w.c  clear.c  clear_multiple.c  clears.c  cmp.c  cmp_si.c  cmp_ui.c  cmpabs.c  com.c  div_2exp.c  fdiv_q.c  fdiv_qr.c  fdiv_r.c  gcd.c  get_si.c  get_str.c  get_ui.c  init.c  init_multiple.c  init_set.c  init_set_multiple.c  init_set_ui.c  init_set_ui_multiple.c  inits.c  inits_sets.c  inits_sets_ui.c  invert.c  lcm.c  mod.c  mul.c  mul_2exp.c  mul_ui.c  neg.c  or.c  (+20 more)
tests/: CMakeLists.txt  test_basic.c  test_bigint.cpp  test_mpn.cpp  test_mpz.cpp  test_mpz_big.cpp
